--- a/src/App.css
+++ b/src/App.css
@@ -7,3 +7,10 @@
 .cursor-pointer {
   cursor: pointer;
 }
+
+.cart-product-image {
+  width: 50px;
+  height: 50px;
+  border-radius: 12px;
+  /* object-fit: contain; */
+}
